re PR c++/54122 (segfault comparing enum class in lambda inside constructor of a templated class)

PR c++/54122
	* tree.c (lvalue_kind) [INDIRECT_REF]: Don't check for
	METHOD_TYPE.

From-SVN: r195806